# nvmrc-version-resource

./: .flake8  .gitignore  .python-version  Dockerfile  README.md  file  pyproject.toml
nvmrc_version/: check.py  input.py  logs.py  models.py  settings.py  spider.py
tests/: test_logs.py  test_model_in.py  test_model_mode_version.py  test_model_node_version.py  test_model_source.py  test_model_version.py  test_settings.py
tests/files/: input.json  output.json
